--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:title:output_ext
 exclude: [vendor]
-repository: xapi-project/xapi-project.github.io
+repository: imaidev/docs
