--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:title:output_ext
 exclude: [vendor]
-repository: imaidev/docs
+repository: wbwangk/docs
 baseurl: "docs"
